fixing safari image stretch bug

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,6 +20,7 @@ main {
 }
 
 .header {
+    align-items: flex-start;
     display: flex;
     left: 0;
     position: absolute;
